[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/UI/Brewing/Objects/GlassBottleLiquid.png" type="Texture" id=1]
[ext_resource path="res://Images/UI/Brewing/Objects/GlassBottle.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/Brewing/Objects/GlassBottleScriptgd.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7 )

[node name="GlassBottle" type="Node2D"]
script = ExtResource( 3 )

[node name="GlassBottle" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="GlassBottleLiquid" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
